src/main/java/io/github/jhipster/sample/web/rest/errors/package-info.java
/**
 * Specific errors used with Zalando's "problem-spring-web" library.
 *
 * More information on https://github.com/zalando/problem-spring-web
 */
package io.github.jhipster.sample.web.rest.errors;
